# JSON2Bat

./: .astylerc  .gitignore  BitteLesenVorBewertung.txt  CMake.md  CMakeLists.txt  Doxyfile  NewREADME.md  README.md  VSCodeMinGW.bat  jsonToBatch  manpage.troff  run.sh  runTests.sh  sonar-project.properties
.github/workflows/: cmake-linux.yml  cmake-multi-platform.yml  cmake-windows-mingw.yml  cmake-windows-ninja.yml  cmake-windows.yml  doxygenPages.yml  sonarcloud.yml
assets/man/: json2batch.troff
conf/: CMakeLists.txt  Doxyfile.in  NewREADME.in.md  README.in.md  README.md.in  config.hpp.in  config.in.hpp  easylogging.conf  easylogging.in.conf  man1.in.troff
docs/: index.html
docs/html/: README_8md.html  StartupHandler_8cpp.html  StartupHandler_8cpp.js  StartupHandler_8cpp__incl.map  StartupHandler_8cpp__incl.md5  (+116 more)
html/: annotated.html  annotated_dup.js  classes.html  dir_000001_000000.html  dir_000002_000000.html  dir_1615da3a94339053b2ab44db3685f5d0.html  dir_1615da3a94339053b2ab44db3685f5d0.js  dir_1615da3a94339053b2ab44db3685f5d0_dep.map  dir_1615da3a94339053b2ab44db3685f5d0_dep.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_b0856f6b0d80ccb263b2f415c91f9e17.html  dir_b0856f6b0d80ccb263b2f415c91f9e17.js  dir_b0856f6b0d80ccb263b2f415c91f9e17_dep.map  doxygen.css  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  graph_legend.html  hierarchy.html  hierarchy.js  index.html  inherit_graph_0.map  inherit_graph_0.md5  inherit_graph_1.map  inherit_graph_1.md5  inherit_graph_2.map  inherit_graph_2.md5  inherit_graph_3.map  inherit_graph_3.md5  inherit_graph_4.map  inherit_graph_4.md5  inherit_graph_5.map  inherit_graph_5.md5  (+17 more)
include/: LoggingWrapper.hpp  Utilities.hpp
jsonfiles/: nurTest.json
latex/: annotated.tex  dir_1615da3a94339053b2ab44db3685f5d0.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_b0856f6b0d80ccb263b2f415c91f9e17.tex  dir_b0856f6b0d80ccb263b2f415c91f9e17_dep.md5  files.tex  hierarchy.tex  index.tex  namespaces.tex  refman.aux  refman.idx  refman.ilg  refman.ind  refman.out  refman.tex  refman.toc  topics.tex
lib/: CMakeLists.txt  LoggingWrapper.cpp  xgetopt.c
lib/jsoncpp/: CMakeLists.txt
man/: json2batch.troff
markdown/: CMake.md  CommentPresets.cpp  CommentPresets.md  Struktur.md  fileComment.md
rtf/: dir_1615da3a94339053b2ab44db3685f5d0.rtf  dir_1615da3a94339053b2ab44db3685f5d0_dep.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.rtf  dir_b0856f6b0d80ccb263b2f415c91f9e17.rtf  refman.rtf
samples/: MinGW.bat  VSCodeMinGW.json
src/: main.cpp  nurTest.cpp
(+1091 files in other folders)
